--- a/src/illustrator/web/templates/base.html
+++ b/src/illustrator/web/templates/base.html
@@ -347,7 +347,9 @@
     <script src="{{ url_for('static', path='/js/app.js') }}"></script>
 
     <!-- Floating Status Window for Background Sessions -->
+    {% if not request.path.startswith('/process') %}
     {% include 'floating_status.html' %}
+    {% endif %}
 
     {% block extra_js %}{% endblock %}
 </body>
