--- a/src/illustrator/web/templates/processing.html
+++ b/src/illustrator/web/templates/processing.html
@@ -9,8 +9,8 @@
     <button type="button" class="btn btn-outline-secondary" onclick="pauseProcessing()" id="pauseBtn" disabled>
         <i class="bi bi-pause"></i> Pause
     </button>
-    <button type="button" class="btn btn-outline-info" onclick="continueInBackground()" id="backgroundBtn">
-        <i class="bi bi-arrow-up-right-square"></i> Continue in Background
+    <button type="button" class="btn btn-outline-warning" onclick="restartProcessing()" id="restartBtn">
+        <i class="bi bi-arrow-clockwise"></i> Restart
     </button>
     <button type="button" class="btn btn-outline-danger" onclick="cancelProcessing()" id="cancelBtn" disabled>
         <i class="bi bi-stop"></i> Cancel
