--- a/src/illustrator/web/templates/floating_status.html
+++ b/src/illustrator/web/templates/floating_status.html
@@ -349,6 +349,9 @@ class FloatingStatusManager {
         // Session control
         this.pauseBtn?.addEventListener('click', () => this.pauseSession());
         this.resumeBtn?.addEventListener('click', () => this.resumeSession());
+        this.cancelBtn?.addEventListener('click', () => this.cancelSession());
+        this.restartBtn?.addEventListener('click', () => this.restartSession());
+        this.resumeBtn?.addEventListener('click', () => this.resumeSession());
         this.openFullBtn?.addEventListener('click', () => this.openFullSession());
         
         // Prevent window from closing on click
