--- a/src/illustrator/web/templates/floating_status.html
+++ b/src/illustrator/web/templates/floating_status.html
@@ -37,22 +37,18 @@
         </div>
         
         <div class="status-actions mt-3">
-            <div class="d-flex gap-2">
-                <button class="btn btn-sm btn-warning flex-fill d-flex align-items-center justify-content-center" id="pauseSessionBtn" style="display: none;">
-                    <span class="material-icons-outlined me-1">pause</span>
-                    <span>Pause</span>
+            <div class="d-flex justify-content-between">
+                <button class="btn btn-sm btn-warning btn-icon d-flex align-items-center justify-content-center" id="pauseSessionBtn" style="display: none;" title="Pause Processing">
+                    <span class="material-icons-outlined">pause</span>
                 </button>
-                <button class="btn btn-sm btn-success flex-fill d-flex align-items-center justify-content-center" id="resumeSessionBtn" style="display: none;">
-                    <span class="material-icons-outlined me-1">play_arrow</span>
-                    <span>Resume</span>
+                <button class="btn btn-sm btn-success btn-icon d-flex align-items-center justify-content-center" id="resumeSessionBtn" style="display: none;" title="Resume Processing">
+                    <span class="material-icons-outlined">play_arrow</span>
                 </button>
-                <button class="btn btn-sm btn-danger flex-fill d-flex align-items-center justify-content-center" id="cancelSessionBtn">
-                    <span class="material-icons-outlined me-1">stop</span>
-                    <span>Cancel</span>
+                <button class="btn btn-sm btn-danger btn-icon d-flex align-items-center justify-content-center" id="cancelSessionBtn" title="Cancel Processing">
+                    <span class="material-icons-outlined">stop</span>
                 </button>
-                <button class="btn btn-sm btn-primary flex-fill d-flex align-items-center justify-content-center" id="restartSessionBtn">
-                    <span class="material-icons-outlined me-1">restart_alt</span>
-                    <span>Restart</span>
+                <button class="btn btn-sm btn-primary btn-icon d-flex align-items-center justify-content-center" id="restartSessionBtn" title="Restart Processing">
+                    <span class="material-icons-outlined">restart_alt</span>
                 </button>
             </div>
         </div>
